PP-14842 add new endpoint
Add a new endpoint that will eventually replace `v1/transaction/gateway-transaction/{gatewayTransactionId}` by moving gatewayTransactionId to be a query param.

Add tests.

Note: there is a bit of discrepancy between some tests when a query param is missing:

- TransactionResourceTest returns 400 error code and a clear message about the missing query param
- TransactionResourceIT returns 422 error code and a generic message not containing the missing query param

Given that the existing functionality is not being changed, we decided to keep it as is.
