# src/main/java/uk/gov/pay/ledger/transaction/resource/TransactionResource.java
@@ -269,8 +269,28 @@ public class TransactionResource {
                     @ApiResponse(responseCode = "404", description = "Not found")
             }
     )
-    public TransactionView findByGatewayTransactionId(@Parameter(example = "a14f0926-b44d-4160-8184-1b1f66e576ab", description = "Transaction ID from payment provider")
+    @Deprecated
+    public TransactionView findByGatewayTransactionIdLegacy(@Parameter(example = "a14f0926-b44d-4160-8184-1b1f66e576ab", description = "Transaction ID from payment provider")
                                                       @PathParam("gatewayTransactionId") String gatewayTransactionId,
+                                                      @Parameter(example = "sandbox", required = true) @QueryParam("payment_provider") @NotEmpty String paymentProvider
+    ) {
+        return transactionService.findByGatewayTransactionId(gatewayTransactionId, paymentProvider)
+                .orElseThrow(() -> new WebApplicationException(Response.Status.NOT_FOUND));
+    }
+
+    @Path("/gateway-transaction")
+    @GET
+    @Timed
+    @Operation(
+            summary = "Get transaction for a gateway transaction ID",
+            responses = {
+                    @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = TransactionView.class))),
+                    @ApiResponse(responseCode = "422", description = "If payment_provider and/or gateway_transaction_id query parameter is missing", content = @Content(schema = @Schema(implementation = ErrorResponse.class))),
+                    @ApiResponse(responseCode = "404", description = "Not found")
+            }
+    )
+    public TransactionView findByGatewayTransactionId(@Parameter(example = "a14f0926-b44d-4160-8184-1b1f66e576ab", description = "Transaction ID from payment provider", required = true)
+                                                      @QueryParam("gateway_transaction_id") @NotEmpty String gatewayTransactionId,
                                                       @Parameter(example = "sandbox", required = true) @QueryParam("payment_provider") @NotEmpty String paymentProvider
     ) {
         return transactionService.findByGatewayTransactionId(gatewayTransactionId, paymentProvider)
